k8s/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: notes-database
spec:
  selector:
    app: notes-database
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  type: ClusterIP
